# ChangeLog for dev-db/libdbi-drivers
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/libdbi-drivers/ChangeLog,v 1.59 2013/11/24 08:40:50 pacho Exp $

  24 Nov 2013; Pacho Ramos <pacho@gentoo.org> libdbi-drivers-0.9.0.ebuild:
  x86 stable, bug #486476

  23 Nov 2013; Pacho Ramos <pacho@gentoo.org> libdbi-drivers-0.9.0.ebuild:
  amd64 stable, bug #486476

  11 Nov 2013; Jeroen Roovers <jer@gentoo.org> libdbi-drivers-0.9.0.ebuild:
  Stable for HPPA (bug #486476).

  10 Sep 2013; Patrick Lauer <patrick@gentoo.org> libdbi-drivers-0.9.0.ebuild:
  Whitespace

*libdbi-drivers-0.9.0 (29 Aug 2013)

  29 Aug 2013; Robin H. Johnson <robbat2@gentoo.org>
  +files/libdbi-drivers-0.9.0-doc-build-fix.patch, +libdbi-drivers-0.9.0.ebuild:
  Bump per bug #465716.

  14 May 2013; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +files/libdbi-drivers-0.8.3-fix-ac-macro.patch,
  libdbi-drivers-0.8.3-r2.ebuild:
  [dev-db/libdbi-drivers] Add patch to replace AM_CONFIG_HEADER with
  AC_CONFIG_HEADERS - fixes build with automake-1.13..

  13 Sep 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  libdbi-drivers-0.8.3-r2.ebuild:
  Conditionalize static lib creation and prune the .la file.

  13 Sep 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  -files/libdbi-drivers-0.8.1-oci8.diff, -libdbi-drivers-0.8.1-r1.ebuild,
  -libdbi-drivers-0.8.1-r2.ebuild, -libdbi-drivers-0.8.3-r1.ebuild,
  libdbi-drivers-0.8.3-r2.ebuild:
  Cleanup the ebuild to be eapi4. Drop sqlite2 support to have saner sqlite way.
  Redux older versions. Stabilise latest on all arches as it emerged on my
  stable boxen without issue contrary the old stable. Keep old stable around
  just in case.

*libdbi-drivers-0.8.3-r2 (28 Sep 2010)

  28 Sep 2010; Robin H. Johnson <robbat2@gentoo.org>
  libdbi-drivers-0.8.1-r1.ebuild, libdbi-drivers-0.8.1-r2.ebuild,
  libdbi-drivers-0.8.3.ebuild, libdbi-drivers-0.8.3-r1.ebuild,
  +libdbi-drivers-0.8.3-r2.ebuild: