@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/libdbi-drivers
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/libdbi-drivers/ChangeLog,v 1.59 2013/11/24 08:40:50 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/libdbi-drivers/ChangeLog,v 1.60 2013/11/27 18:51:43 maekke Exp $
+
+  27 Nov 2013; Markus Meier <maekke@gentoo.org> libdbi-drivers-0.9.0.ebuild:
+  arm stable, bug #486476
 
   24 Nov 2013; Pacho Ramos <pacho@gentoo.org> libdbi-drivers-0.9.0.ebuild:
   x86 stable, bug #486476
